# simple-inference-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_server.sh
app/: __init__.py  auth.py  config.py  llm.py  main.py  models.py
app/routes/: __init__.py  admin.py  chat.py  health.py
scripts/: download_model.sh  generate_api_key.py  setup_without_docker.sh
tests/: __init__.py  test_auth.py  test_endpoints.py
